[gd_scene load_steps=7 format=3 uid="uid://dogiokehlidko"]

[ext_resource type="Script" uid="uid://brna7ji65mkj3" path="res://script/torch.gd" id="1_6wjlc"]
[ext_resource type="Texture2D" uid="uid://e1w4vsosiu6j" path="res://art/free-dungeon-platformer-pixel-art-tileset/PNG/Details/torch2_1.png" id="1_lf4n2"]

[sub_resource type="Gradient" id="Gradient_6wjlc"]
offsets = PackedFloat32Array(0, 0.668831)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_icg1l"]
gradient = SubResource("Gradient_6wjlc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_36k3j"]
radius = 26.0
height = 138.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wjlc"]
size = Vector2(237, 248.5)

[node name="Torch" type="Node2D"]
script = ExtResource("1_6wjlc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lf4n2")

[node name="Light" type="PointLight2D" parent="."]
energy = 2.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_icg1l")
texture_scale = 4.0

[node name="IgniteDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IgniteDetect"]
position = Vector2(-1, 43)
shape = SubResource("CapsuleShape2D_36k3j")

[node name="TorchLight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchLight"]
position = Vector2(-0.5, -7.25)
shape = SubResource("RectangleShape2D_6wjlc")

[connection signal="body_entered" from="IgniteDetect" to="." method="_on_ignite_enter"]
[connection signal="body_entered" from="TorchLight" to="." method="_on_torch_enter"]
[connection signal="body_exited" from="TorchLight" to="." method="_on_torch_exit"]
